# openbabel-svn-mirror

./: CMakeLists.txt  Doxyfile  INSTALL
data/: torlib.txt
include/openbabel/: align.h  atom.h  builder.h  confsearch.h  forcefield.h  generic.h  mol.h  permutation.h  query.h
include/openbabel/math/: align.h  fastalign.h
include/openbabel/stereo/: stereo.h
scripts/: openbabel-python.i
src/: CMakeLists.txt  align.cpp  base.cpp  builder.cpp  conformersearch.cpp  confsearch.cpp  forcefield.cpp  graphsym.cpp  mol.cpp  permutation.cpp  rotor.cpp
src/bliss/: graph.cc  heap.cc  orbit.cc  partition.cc  timer.cc  uintseqhash.cc  utils.cc
src/charges/: qtpie.cpp
src/forcefields/: forcefieldmmff94.cpp  forcefieldmmff94.h
src/formats/: CMakeLists.txt  povrayformat.cpp
src/math/: align.cpp  fastalign.cpp
src/stereo/: perception.cpp
test/: CMakeLists.txt  aligntest.cpp  confsearchtest.cpp  divposestest.cpp  fastaligntest.cpp
tools/: CMakeLists.txt  calcrmsd.cpp  confab.cpp  confab.py
windows-vc2008/: default_build.bat  x64_default_build.bat
windows-vc2008/Distribution/: NSISScriptForConfab.nsi
windows-vc2008/libs/x64/: env.bat
